--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="container header__block">
-            <img src="img/logo.png" alt="logo" class="header__logo">
+            <a href="index.html" class="logo__link"><img src="img/logo.png" alt="logo" class="header__logo"></a>
             <nav class="header__nav">
                 <a href="#" class="header__nav--item small__text">Акции</a>
                 <a href="#" class="header__nav--item small__text">Поиск</a>
@@ -88,7 +88,7 @@
                     <option value="4">4</option>
                     <option value="5">5</option>
                 </select>
-                <button type="submit" class="find__button small__text">Поиск</button>
+                <a href="camp.html" class="find__button small__text">Поиск</a>
             </form>
         </div>
     </section>
