--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
     </section>
     <section class="find">
+        <h2 class="second__title rewiew__title">Найти дом-бочку подходящий для Вас</h2>
         <div class="container find__block">
             <img src="img/bochka-dom.jpg" alt="img" class="find__img">
             <form action="#" class="find__form">
@@ -88,7 +89,7 @@
                     <option value="4">4</option>
                     <option value="5">5</option>
                 </select>
-                <a href="camp.html" class="find__button small__text">Поиск</a>
+                <a href="search.html" class="find__button small__text">Поиск</a>
             </form>
         </div>
     </section>
@@ -112,7 +113,7 @@
                     <li class="small__text promotion__block--text"> — Скидка 59% на 3 дня и 2 ночи проживания в домике для 4 человек (2460 руб. вместо 6000 руб.)
                     <li class="small__text promotion__block--text">— Скидка 60% на 3 дня и 2 ночи проживания домике для 5 человек (3200 руб. вместо 8000руб.)
                 </ul>
-                <button class="find__button small__text">Открыть полностью</button>
+                <button class="find__button small__text promotion__button">Открыть полностью</button>
             </div>
             <img src="img/promotion1.jpg" alt="img" class="promotion__img1">
         </div>
@@ -133,7 +134,7 @@
                     <li class="small__text promotion__block--text"> — защита от насекомых (территория кемпинга обработана от клещей)
                     <li class="small__text promotion__block--text">— обустроенный лагерь (беседки, баня, мангал, места для спортивных и детских игр)
                 </ul>
-                <button class="find__button small__text">Открыть полностью</button>
+                <button class="find__button small__text promotion__button">Открыть полностью</button>
             </div>
         </div>
         <div class="promotion__content">
@@ -150,7 +151,7 @@
                     <li class="small__text promotion__block--text">— Для бронирования существуют общие условия — предоплата 50% или сообщить данные купона (купон будет активирован только в день приезда)
                     <li class="small__text promotion__block--text">Срок действия купонов: с 19.10.2020 до 20.12.2021 (включительно)
                 </ul>
-                <button class="find__button small__text">Открыть полностью</button>
+                <button class="find__button small__text promotion__button">Открыть полностью</button>
             </div>
             <img src="img/promotion4.jpg" alt="img" class="promotion__img1">
         </div>
