--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             <form action="#" class="find__form">
                 <label for="find1" class="find__label small__text">Выбор региона</label>
                 <select class="find__input" name="select" id="find1">
-                    <option value="0"></option>
                     <option value="1">Омская область</option>
                     <option value="2">Красноярский край</option>
                     <option value="3">Алтайский край</option>
@@ -99,15 +98,15 @@
             <div class="promotion__content">
             <div class="promotion__block1">
                 <h3 class="main__text promotion__text">Скидка до 60%. 2 или 3 дня  проживания в доме-бочке (до 5 человек) в кемпинге «Дача Поддубного»</h3>
+                <h3 class="second__title promotion__block--title">Отдых 2 дня и 1 ночь:</h3>
                 <ul class="second__title promotion__block--title">
-                    Отдых 2 дня и 1 ночь:
                     <li class="small__text promotion__block--text">— Скидка 53% на 2 дня и 1 ночь проживания в домике для 2 человек (470 руб. вместо 1000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 54% на 2 дня и 1 ночь проживания в домике для 3 человек (920 руб. вместо 2000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 55% на 2 дня и 1 ночь проживания вдомике для 4 человек (1350 руб. вместо 3000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 56% на 2 дня и 1 ночь проживания в домике для 5 человек (1760 руб. вместо 4000 руб.)</li>
                 </ul>
+                <h3 class="second__title promotion__block--title">Отдых 3 дня и 2 ночи:</h3>
                 <ul class="second__title promotion__block--title">
-                    Отдых 3 дня и 2 ночи:
                     <li class="small__text promotion__block--text">— Скидка 57% на 3 дня и 2 ночи проживания в домике для 2 человек (860 руб. вместо 2000 руб.)
                     <li class="small__text promotion__block--text"> — Скидка 58% на 3 дня и 2 ночи проживания в домикедля 3 человек (1680 руб. вместо 4000 руб.)
                     <li class="small__text promotion__block--text"> — Скидка 59% на 3 дня и 2 ночи проживания в домике для 4 человек (2460 руб. вместо 6000 руб.)
@@ -121,14 +120,14 @@
             <img src="img/promotion3.jpg" alt="img" class="promotion__img1">
             <div class="promotion__block1">
                 <h3 class="main__text promotion__text">Скидка до 51%. Уютное место самоизоляции для семьи в обустроенном кемпинге «Лесная поляна»</h3>
+                <h3 class="second__title promotion__block--title">Купон действует на следующие виды услуг:</h3>
                 <ul class="second__title promotion__block--title">
-                    Купон действует на следующие виды услуг:
                     <li class="small__text promotion__block--text">— Скидка 51% для семьи до 3 человек на 14 суток 1 место для машины (4900 руб. вместо 10000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 51% для семьи до 4 человек на 14 суток и 2 места для машин (9800 руб. вместо 20000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 50% для семьи до 5 человек на 14 суток и 3 места для машин (15000 руб. вместо 30000 руб.)</li>
                 </ul>
+                <h3 class="second__title promotion__block--title">Преимущества изоляции у нас:</h3>
                 <ul class="second__title promotion__block--title">
-                    Преимущества изоляции у нас:
                     <li class="small__text promotion__block--text">— безопасность (территория кемпинга является частной и охраняется)
                     <li class="small__text promotion__block--text"> — мало людей (площадь — 200 кв. м)
                     <li class="small__text promotion__block--text"> — защита от насекомых (территория кемпинга обработана от клещей)
@@ -140,8 +139,8 @@
         <div class="promotion__content">
             <div class="promotion__block1">
                 <h3 class="main__text promotion__text">Скидка до 50%. Изолируйся на месяц в обустроенном кемпинге «Бочки Диогена» со своей второй половинкой</h3>
+                <h3 class="second__title promotion__block--title">Купон действует на следующие виды услуг:</h3>
                 <ul class="second__title promotion__block--title">
-                    Купон действует на следующие виды услуг:
                     <li class="small__text promotion__block--text">— Скидка 25% для 1 человека на месяц и 1 место для машины (22500 руб. вместо 30000 руб.)</li>
                     <li class="small__text promotion__block--text">— Скидка 50% для семьи из 2 человек на месяц и 1 место для машины (15000 руб. вместо 30000 руб.)
                     </li>
